--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@observablehq/plot": "^0.6.17",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
+    "d3": "^7.9.0",
     "jsdom": "^26.1.0",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
